--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,6 +1,8 @@
 <div class="nav-collapse">
   <ul class="nav">
+  	<li><%= link_to "Dojos", dojos_path %></li>
     <li><%= link_to "Students", students_path %></li>
+    <li><%= link_to "Tournaments", tournaments_path %></li>
     <li><%= link_to "Sections", sections_path %></li>
     <li><%= link_to "Events", events_path %></li>
 		<!-- <li><%# link_to "Registrations", registrations_path %></li> -->
