--- a/app/views/tournaments/_form.html.erb
+++ b/app/views/tournaments/_form.html.erb
@@ -3,6 +3,9 @@
     <legend><%= controller.action_name.capitalize %> Tournament</legend>
 		
 		<%= f.input :name %>
+    <%= f.input :date, :label => "Date", :as => :date, :start_year => Date.today.year + 4, :end_year => Date.today.year, :order => [:month, :day, :year], :include_blank => true %>
+    <%= f.input :min_rank, :collection => Student::RANKS %>
+    <%= f.input :max_rank, :collection => Student::RANKS %>
 		<%= f.input :active %>
 
     <div class="form-actions">
