--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,1 +1,25 @@
+<%= simple_nested_form_for @student, :html => { :class => 'form-horizontal' } do |student_form| %>
+	<div class="row">
+		<div class="span7">
+			<fieldset>
+		    <legend><%= controller.action_name.capitalize %> Student</legend>
+					<%= render :partial => "student_fields", :locals => {:f => student_form} %>
+		  </fieldset>
+		</div>
+		<div class="span5">
+			<legend>Create a user for this student</legend>
+			<div id="student_user">
+				
+				<%= student_form.simple_fields_for :user do |user_form| %>
+					<%= render :partial => "user_fields", :locals => {:f => user_form} %>
+				<% end %> 
+				
+			</div> <!-- end of project_tasks div -->
+		</div>
+	</div>
+	<div class="form-actions">
+    <%= student_form.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to 'Cancel', students_path, :class => 'btn' %>
+  </div>
+<% end %>
 <%= render :partial => 'form' %>
