--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -10,7 +10,7 @@
 			<legend>Create a user for this student</legend>
 			<div id="student_user">
 				
-				<%= student_form.simple_fields_for :user do |user_form| %>
+				<%= student_form.simple_fields_for @user do |user_form| %>
 					<%= render :partial => "user_fields", :locals => {:f => user_form} %>
 				<% end %> 
 				
