--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<%# if current_user && current_user.is_admin? %>
-  <%# render :partial => "admin_home" %>
-<%# else %>
+<% if logged_in? %>
+  <% render :partial => "admin_home" %>
+<% else %>
   <%= render :partial => "general_home" %>
-<%# end %>
+<% end %>
