--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,15 @@
   	  <div class="navbar-inner">
   	    <div class="container">
   	      <%= render :partial => "partials/navigation" %>
+          <% if logged_in? %>
+            <p class="ident pull-right">
+              Welcome, <%= link_to current_user.email, user_path(current_user) %> | 
+              <%= link_to "Logout", logout_path %>
+            </p>
+        <% end %>
   	    </div>
+
+        
   	  </div>
   	</div>
   	</div>
