need to make dashboard

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <% render :partial => "admin_home" %>
+  <%= render :partial => "personal_home" %>
 <% else %>
   <%= render :partial => "general_home" %>
 <% end %>
