--- a/app/views/dojos/show.html.erb
+++ b/app/views/dojos/show.html.erb
@@ -35,6 +35,7 @@
       <%= image_tag @dojo.create_map_link %>
     </div>
   </div>
+  <%if logged_in? == true %>
   <div class="row">
     <table class="table table-striped">
       <tr><h4>Current Members</h4><tr>
@@ -69,6 +70,7 @@
       </div>
       <%= will_paginate @dojo_students, :container => true, :previous_label => "Previous", :next_label => "Next", :inner_window => 2 %>
     </div>
+  <%end%>
   </div>
 </div>
 
