--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,11 +17,13 @@
             <tr>
               <td><%= link_to event.name, event_path(event) %></td>
               <td class="centered"><%= event.active ? "Yes" : "No" %></td>
-      				<td class="centered">
-                <%= link_to raw("<i class='icon-pencil'></i> Edit"), edit_event_path(event), :class => 'btn btn-mini' %>
-                &nbsp;
-                <%= link_to raw("<i class='icon-remove icon-white'></i> Destroy"), event_path(event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
-              </td>
+              <% if can? :update, event %>
+        				<td class="centered">
+                  <%= link_to raw("<i class='icon-pencil'></i> Edit"), edit_event_path(event), :class => 'btn btn-mini' %>
+                  &nbsp;
+                  <%= link_to raw("<i class='icon-remove icon-white'></i> Destroy"), event_path(event), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+                </td>
+              <%end%>
             </tr>
           <% end %>
         </tbody>
