changed some dojo authorization stuff

--- a/app/views/dojos/show.html.erb
+++ b/app/views/dojos/show.html.erb
@@ -35,7 +35,7 @@
       <%= image_tag @dojo.create_map_link %>
     </div>
   </div>
-  <%if logged_in? == true %>
+  <%if logged_in?%>
   <div class="row">
     <table class="table table-striped">
       <tr><h4>Current Members</h4><tr>
