--- a/app/views/sections/_current_sections.html.erb
+++ b/app/views/sections/_current_sections.html.erb
@@ -23,7 +23,9 @@
           <td class="centered"><%= section.registrations.size %></td>
   				<td>
   					<%= link_to raw("<i class='icon-file'></i> Details"), section_path(section), :class => 'btn btn-mini' %>
-            <%= link_to raw("<i class='icon-pencil'></i> Edit"), edit_section_path(section), :class => 'btn btn-mini' %>
+            <% if can? :update, section %>
+              <%= link_to raw("<i class='icon-pencil'></i> Edit"), edit_section_path(section), :class => 'btn btn-mini' %>
+            <%end%>
           </td>
         </tr>
       <% end %>
