--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -9,4 +9,6 @@
 	</div>
 </div>
 
-<%= link_to raw("<i class='icon-plus icon-white'></i> Add a New Student"), new_student_path, :class => 'btn btn-primary', :id => 'Create Student' %>
+<%if can? :create, @students.first%>
+	<%= link_to raw("<i class='icon-plus icon-white'></i> Add a New Student"), new_student_path, :class => 'btn btn-primary', :id => 'Create Student' %>
+<%end%>
