--- a/app/views/students/_student_fields.html.erb
+++ b/app/views/students/_student_fields.html.erb
@@ -2,6 +2,8 @@
 		<%= f.input :last_name %>
 		<%= f.input :date_of_birth, :label => "Date of Birth", :as => :date, :start_year => Date.today.year - 4, :end_year => Date.today.year - 75, :order => [:month, :day, :year], :include_blank => true %>
 		<%= f.input :phone %>
+		<% if can? :create, @student%>
 		<%= f.input :rank, :collection => Student::RANKS %>
 		<%= f.input :waiver_signed %>
 		<%= f.input :active %>
+		<%end%>
