--- a/app/views/students/_user_fields.html.erb
+++ b/app/views/students/_user_fields.html.erb
@@ -3,7 +3,9 @@
  			<%= f.input :email%>
 			<%= f.input :password%>
 			<%= f.input :password_confirmation%>
-			<%= f.input :role, :collection => User::ROLES, :prompt => true %>
-			<%= f.input :active %>
+			<% if can? :create, @student%>
+				<%= f.input :role, :collection => User::ROLES, :prompt => true %>
+				<%= f.input :active %>
+			<% end %>
 	</div>
 </div>
