--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -18,5 +18,7 @@
 <div class="form-actions">
   <%= link_to raw("<i class='icon-list'></i> Display All Students"), students_path, :class => 'btn'  %>&nbsp;&nbsp;
   <%= link_to raw("<i class='icon-pencil'></i> Edit #{@student.proper_name}"), edit_student_path(@student), :class => 'btn' %>&nbsp;&nbsp;
-  <%= link_to raw("<i class='icon-remove icon-white'></i> Delete #{@student.proper_name}"), student_path(@student), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <%if can? :destroy, @student%>
+  	<%= link_to raw("<i class='icon-remove icon-white'></i> Delete #{@student.proper_name}"), student_path(@student), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <%end%>
 </div>
