--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -79,6 +79,8 @@
 
 <div class="form-actions">
   <%= link_to raw("<i class='icon-list'></i> Display All Tournaments"), tournaments_path, :class => 'btn'  %>&nbsp;&nbsp;
-  <%= link_to raw("<i class='icon-pencil'></i> Edit Tournament"), edit_tournament_path(@tournament), :class => 'btn' %>&nbsp;&nbsp;
-  <%= link_to raw("<i class='icon-remove icon-white'></i> Delete Tournament"), tournament_path(@tournament), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <%if can? :create, @tournament%>
+    <%= link_to raw("<i class='icon-pencil'></i> Edit Tournament"), edit_tournament_path(@tournament), :class => 'btn' %>&nbsp;&nbsp;
+    <%= link_to raw("<i class='icon-remove icon-white'></i> Delete Tournament"), tournament_path(@tournament), :method => 'delete', :confirm => 'Are you sure?', :class => 'btn btn-danger' %>
+  <%end%>
 </div>
